// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test all apis markup string 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "aa",
<<<<<<< HEAD
    "path": "aa",
=======
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis markup virtualbox 1`] = `
Object {
  "": Object {
    "displayName": "FormState",
    "editable": undefined,
    "errors": Array [],
    "initialValues": Object {
      "aa": "123",
    },
    "initialized": true,
    "invalid": false,
    "loading": false,
    "mounted": true,
    "pristine": false,
    "props": Object {},
    "submitting": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "values": Object {
      "aa": "aa change",
    },
    "warnings": Array [],
  },
  "NO_NAME_FIELD_$0": Object {
    "display": true,
    "displayName": "VirtualFieldState",
    "initialized": true,
<<<<<<< HEAD
    "mounted": true,
    "name": "NO_NAME_FIELD_$0",
    "path": "NO_NAME_FIELD_$0",
    "props": Object {
      "type": "object",
      "x-component": "card",
      "x-component-props": Object {
        "title": "this is card",
      },
=======
    "mounted": false,
    "name": "NO_NAME_FIELD_$0",
    "props": Object {
      "type": "object",
      "x-component": "card",
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
      "x-props": Object {
        "title": "this is card",
      },
    },
    "unmounted": false,
    "visible": true,
  },
  "NO_NAME_FIELD_$0.aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
<<<<<<< HEAD
    "name": "aa",
    "path": "NO_NAME_FIELD_$0.aa",
=======
    "name": "NO_NAME_FIELD_$0.aa",
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
  "aa": Object {
    "active": false,
    "display": true,
    "displayName": "FieldState",
    "editable": true,
    "effectErrors": Array [],
    "effectWarnings": Array [],
    "errors": Array [],
    "formEditable": undefined,
    "initialValue": "123",
    "initialized": true,
    "invalid": false,
    "loading": false,
    "modified": true,
    "mounted": true,
    "name": "NO_NAME_FIELD_$0.aa",
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
    "pristine": false,
    "props": Object {
      "default": "123",
      "type": "string",
      "x-props": Object {
        "data-testid": "input",
      },
    },
    "required": false,
    "ruleErrors": Array [],
    "ruleWarnings": Array [],
    "rules": Array [],
    "selfEditable": undefined,
    "touched": false,
    "unmounted": false,
    "valid": true,
    "validating": false,
    "value": "aa change",
    "values": Array [
      "aa change",
    ],
    "visible": true,
    "visited": false,
    "warnings": Array [],
  },
}
`;

exports[`test all apis markup virtualbox 2`] = `
Object {
  "properties": Object {
    "NO_NAME_FIELD_$0": Object {
      "properties": Object {
        "aa": Object {
          "default": "123",
          "type": "string",
          "x-props": Object {
            "data-testid": "input",
          },
        },
      },
      "type": "object",
      "x-component": "card",
<<<<<<< HEAD
      "x-component-props": Object {
        "title": "this is card",
      },
=======
>>>>>>> 667c9efe1b9281583f279a8b179d5a98b952f05c
      "x-props": Object {
        "title": "this is card",
      },
    },
  },
  "type": "object",
}
`;
